# rexia_ai

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  rexia_ai.sln  setup.py
UI/: app.py
agencies/: __init__.py  base_agency.py  llama_index_agency.py  statuses.py
agents/: __init__.py  collaborative_agent.py  collaborative_agent_worker.py  custom_function_calling_agent_worker.py  llama_index_agent_workers.py  llama_index_agents.py  manager_agent.py  manager_agent_worker.py
documentation/: test
examples/: agency.py  agent.py  alpha_vantage_tool_example.py  code_tool_workflow_example.py  collaboration_agent.py  google_search_tool_example.py  image_analysis_tool_example.py  memory_example.py  perplexity_lite_example.py  query_knowledge_base_tool_example.py  rexia_ai_huggingface_example.py  rexia_ai_llmware_example.py  rexia_ai_openai_example.py  router_example.py  simple_tool_agent.py  tdd_agent.py  video_analysis_tool_example.py
handlers/: __init__.py  document_handler.py  llama_index_handler.py  selenium_handler.py  streaming_response_handler.py
llms/: __init__.py  llama_index_llm.py
tasks/: __init__.py  base_task.py  priorities.py  statuses.py  types.py
tests/: agency_test.py  agent_test.py  alpha_vantage_tool_test.py  code_tool_workflow_test.py  collaboration_workflow_test.py  google_search_tool_test.py  huggingface_test.py  image_analysis_tool_test.py  llmware_test.py  memory_test.py  openai_test.py  query_knowledge_base_test.py  simple_tool_workflow_test.py  task_complexity_router_test.py  tdd_workflow_test.py  test_base_agency.py  (+1 more)
(+135 files in other folders)
